<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/spinner_color">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:hint="@string/hint_balance"
            android:id="@+id/etAddBalance"
            android:textColor="@color/black"
            android:inputType="number"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddBalance"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@color/pink"
            android:layout_margin="40dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdateBalance"
            android:text="@string/update"
            android:textColor="@color/white"
            android:background="@color/pink"
            android:layout_margin="40dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>